# skorch-beginner

./: README.md  main.py  pyproject.toml  text_classification.py
